--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -247,6 +247,14 @@ section:not(#about) h2.framed-subtitle {
   margin-bottom: 0.5rem;
 }
 
+/* Hero Font H1 - H3 Shadow */
+#hero h1, #hero h2, #hero h3 {
+  text-shadow:
+    0 0 3px rgba(0, 234, 255, 0.9),
+    0 0 6px rgba(0, 234, 255, 0.5),
+    0 2px 10px rgba(0, 0, 0, 0.75); /* subtle dark grounding */
+}
+
 /* H3 FOOTER FONT */
 footer h3 {
   font-family: 'Orbitron', sans-serif;
